--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-GB"
 title                    : "Katja Klobas"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Katja Klobas"
 description              : &description "personal description"
 url                      : https://kkatja.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,8 +22,8 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "Katja Klobas"
+  pronouns         : "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
   employer         : "Red Brick University"
