--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Katja Klobas"
 title_separator          : "-"
 name                     : &name "Katja Klobas"
 description              : &description "personal description"
-url                      : https://kkatja.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://kkatja.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -24,31 +24,31 @@ author:
   avatar           : "profile.png"
   name             : "Katja Klobas"
   pronouns         : "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  bio              : "Theoretical physicist"
+  location         : "Birmingham, UK"
+  employer         : "University of Birmingham"
+  uri              : "https://kkatja.github.io"
+  email            : "k.klobas@bham.ac.uk" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  arxiv            : "https://arxiv.org/a/klobas_k_1.html"
+  googlescholar    : "https://scholar.google.com/citations?user=1S7B9UMAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org/0000-0001-6791-8594"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # URL
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : # Username
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
