--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /research/
 
   - title: "Publications"
-    url: /listofpubs/
+    url: /publications/
 
   - title: "Teaching"
     url: /teaching/    
